k8s/http-route/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: springboot-demo-route
  namespace: black-bull
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: black-bull
  hostnames:
    - "gmkube-springboot-demo.localhost"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: springboot-demo-service
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nestjs-demo-route
  namespace: black-bull
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: black-bull
  hostnames:
    - "gmkube-nestjs-demo.localhost"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: nestjs-demo-service
          port: 3000
